--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://paulkalait.github.io/reactportfolio/portfolio-react-app",
+  "homepage": "https://paulkalait.github.io/reactportfolio/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d master -d build",
