--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "homepage": "https://paulkalait.github.io/reactportfolio/",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
