--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -14,7 +15,6 @@
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
- 
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
